@startuml
!include HeaderTable_LayoutView_Map.puml
!include TableViews.puml

class MainWindowStateMachine {
}

class MainWindow {
}

class LayoutViewGraphicsScene {
}


class MainWindowController {
}

MainWindowController *--> LayoutViewGraphicsScene
MainWindowController *--> SectionHeaderTableModel
MainWindowController *--> ProgramHeaderTableModel
MainWindowController *--> "2" HeaderTableGraphicsItemMap
MainWindow --> MainWindowController

hide AbstractTableModel
hide methods
hide attributes

@enduml
